// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Markdown > list items 1`] = `
<ol>
  

  <li
    class="__fce-list-item"
  >
    

    <p
      class="__fce-paragraph"
    >
      A paragraph
with two lines.
    </p>
    

    <pre>
      <code>
        indented code

      </code>
    </pre>
    

    <blockquote>
      

      <p
        class="__fce-paragraph"
      >
        A block quote.
      </p>
      

    </blockquote>
    

  </li>
  

</ol>
`;

exports[`Markdown > should render content 1`] = `
<h1
  class="__fce-header-1"
>
  header
</h1>
`;

exports[`Markdown > should render emphasis and strong emphasis 1`] = `
<p
  class="__fce-paragraph"
>
  <strong
    class="__fce-strong"
  >
    foo
  </strong>
    
  <em>
    bar
  </em>
</p>
`;

exports[`Markdown > should render hard line breaks, 1 1`] = `
<p
  class="__fce-paragraph"
>
  foo
  <br />
  

  baz
</p>
`;

exports[`Markdown > should render hard line breaks, 2 1`] = `
<p
  class="__fce-paragraph"
>
  This is the first line.
  <br />
  

  This is the second line.
</p>
`;

exports[`Markdown > should render link 1`] = `
<p
  class="__fce-paragraph"
>
  <a
    href="/url"
    title="title"
  >
    foo
  </a>
</p>
`;
